# iron-shapes

./: .gitignore  .woodpecker.yml  Cargo.toml  README.md
.reuse/: dep5
src/: cmp.rs  concepts.rs  concepts_impl.rs  edge.rs  edge_integer.rs  edge_rational.rs  interval.rs  isotropy.rs  lib.rs  line.rs  math.rs  matrix2d.rs  matrix3d.rs  multi_polygon.rs  path.rs  point.rs  point_string.rs  polygon.rs  prelude.rs  rect.rs  redge.rs  repetition.rs  shape.rs  simple_polygon.rs  simple_rpolygon.rs  text.rs  traits.rs  transform.rs  types.rs  vector.rs
src/algorithms/: convex_hull.rs  mod.rs
