[package]
name = "iron-shapes"
version = "0.0.6"
authors = ["Thomas Kramer <code@tkramer.ch>"]
edition = "2018"
license = "AGPL-3.0"
description = "Basic data types and routines for computational geometry focused on VLSI chip design."
keywords = ["geometry", "euclidean", "vlsi"]
categories = ["graphics"]
readme = "README.md"
repository = "https://codeberg.org/libreda/iron-shapes"
homepage = "https://codeberg.org/libreda/iron-shapes"

[dependencies]
num-traits = "0.2"
num-integer = "0.1"
num-rational = "0.4"
itertools = "0.10.0"
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
rand = "0.8"
